# capturebot

./: .gitignore  Cargo.toml  README.org  capturebot.nix  capturebot.py  default.nix  flake.nix  nixos-module.nix  result  setup.cfg  setup.py
capturebot/: __init__.py  result
scripts/: dedup.el  excludes.el
src/: config.rs  lib.rs  main.rs  parse_backup.rs  tests.rs
