[package]
name = "capturebot-new"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
organic = "0.1.16"
url = "2.5.4"
uuidgen = "0.1.0"
chrono = "0.4.41"
slugify = "0.1.0"
