[package]
name = "capturebot"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parse_backup"
path = "src/parse_backup.rs"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
organic = "0.1.16"
url = "2.5.4"
uuidgen = "0.1.0"
chrono = "0.4.41"
slugify = "0.1.0"
serde_json = "1.0.140"
serde = "1.0.219"
serde_with = "3.12.0"
reqwest = "0.12.19"
walkdir = "2.5.0"


[dev-dependencies]
tempfile = "3.5"
mockall = "0.11"
tokio-test = "0.4"
